# tutorials

lessons/052/app123/: package-lock.json  package.json
lessons/071/express/: package-lock.json
lessons/073/0-express/: package-lock.json  package.json
lessons/075/sam/s3/: package-lock.json
lessons/076/wall-e/: package-lock.json
lessons/077/secret-access/: package-lock.json  package.json
lessons/110/www.devopsbyexample.io/: package-lock.json
lessons/115/s3/: package-lock.json
lessons/118/my-app/: package-lock.json
lessons/119/my-chat-app/: package-lock.json
lessons/124/functions/nodejs/: package-lock.json
lessons/126/functions/nodejs/: package-lock.json
lessons/141/myapp/: requirements.txt
lessons/143/node-app/: package-lock.json
lessons/146/web/: Cargo.toml
lessons/147/rust-app/: Cargo.toml
lessons/180/python-app/: requirements.txt
